# bottlerocket-settings-sdk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: rust.yml
bottlerocket-settings-sdk/: Cargo.toml
bottlerocket-settings-sdk/src/: lib.rs
bottlerocket-settings-sdk/src/cli/: mod.rs  proto1.rs
bottlerocket-settings-sdk/src/example/: empty.rs
bottlerocket-settings-sdk/src/extension/: builder.rs  mod.rs  proto1.rs
bottlerocket-settings-sdk/src/helper/: mod.rs
bottlerocket-settings-sdk/src/migrate/: mod.rs
bottlerocket-settings-sdk/src/migrate/linear/: interface.rs  mod.rs
bottlerocket-settings-sdk/src/migrate/null/: extensionbuilder.rs  mod.rs
bottlerocket-settings-sdk/src/model/: erased.rs  mod.rs
bottlerocket-settings-sdk/tests/: sample_extensions.rs
bottlerocket-settings-sdk/tests/colliding_versions/: mod.rs
bottlerocket-settings-sdk/tests/migration_validation/: linear.rs  mod.rs  null.rs
bottlerocket-settings-sdk/tests/motd/: mod.rs  v1.rs  v2.rs
bottlerocket-template-helper/: Cargo.toml
bottlerocket-template-helper/src/: lib.rs
bottlerocket-template-helper/tests/: tests.rs
src/: lib.rs
src/cli/: proto1.rs
src/doc_do_not_use/: mod.rs  needs_migrator.rs
src/example/: empty.rs  mod.rs
src/extension/: builder.rs  mod.rs  proto1.rs
src/migrate/: mod.rs
src/migrate/linear/: erased.rs  extensionbuilder.rs  interface.rs  mod.rs  validator.rs
src/model/: erased.rs  mod.rs
tests/: sample_extensions.rs
tests/colliding_versions/: mod.rs
tests/migration_validation/: mod.rs
tests/motd/: mod.rs  v1.rs  v2.rs
