[package]
name = "bottlerocket-template-helper"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1"
quote = "1"
serde_json = "1"
syn = { version = "1", default-features = false, features = ["full", "parsing", "printing", "proc-macro", "visit-mut"] }


[dev-dependencies]
anyhow = "1"
bottlerocket-settings-sdk = { path = "../bottlerocket-settings-sdk", version = "0.1" }
